# market-place

./: .flake8  .gitignore  AGENTS.md  CONTEXT.md  backend-design.md  best-practices.md  celery.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  elasticsearch_django_overview.md  frontend-landing-spec.md  images_manifest.json  manage.py  notebook.ipynb  pyproject.toml  pytest.ini  safe trade.session.sql  schema.yml
.agents/skills/django-experts/: SKILL.md
.agents/skills/emil-design-eng/: SKILL.md
.agents/skills/improve-animations/: PLAN-TEMPLATE.md  SKILL.md
.agents/skills/read-docs/: SKILL.md
.agents/skills/review-animations/: SKILL.md  STANDARDS.md
.agents/skills/tailwind-design-system/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: test.yml
apps/auth/: __init__.py
apps/auth/google/: apps.py  doc.md  schema.py  social_auth_pipeline.py  urls.py  views.py
apps/auth/traditional/: apps.py  doc.md  schema.py  serializers.py  urls.py  views.py
apps/categories/: apps.py  doc.md  documents.py  models.py  serializers.py  services.py  signals.py  throttle.py  views.py
apps/categories/api/: schema.py  serializers.py  urls.py  views.py
apps/categories/migrations/: 0001_initial.py
apps/categories/utils/: model_method.py  slug_generator.py
apps/chat/: consumers.py  models.py  tests.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py
apps/comments/: admin.py  api_views.py  apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/comments/api/: doc.md  permissions.py  schema.py  serializers.py  throttling.py  urls.py  views.py
apps/comments/migrations/: 0001_initial.py  0002_initial.py  0003_remove_userrating_unique_rating_and_more.py  0004_alter_userrating_options_and_more.py  0005_ratingeligibility_and_more.py  0006_alter_userrating_unique_together.py
apps/comments/tests/: test_rating.py
apps/comments/utils/: filters.py
apps/core/: apps.py  authentication.py  exceptions.py  middleware.py  models.py  pagination.py  permissions.py  serializers.py  throttle.py  urls.py  views.py
apps/core/openapi/: spectacular.py
apps/core/spectacular/: spectacular.py  spectacular_extensions.py
apps/disputes/: apps.py  doc.md  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/flutterwave/: views.py
apps/monitoring/: middleware.py  tasks.py  utils.py
apps/notifications/: apps.py  consumers.py  models.py  signals.py  tasks.py
apps/paystack/: __init__.py  clients.py  tests.py  urls.py  views.py
apps/products/: admin.py  apps.py  documents.py  middleware.py  permissions.py  schema.py  serializers.py  signals.py  urls.py  views.py
apps/store/: models.py  serializers.py  tests.py  urls.py  views.py
apps/transactions/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/users/: apps.py  managers.py  models.py  schema.py  serializers.py  signals.py  social_auth_pipeline.py  urls.py  utils.py  views.py
conf/: celery.py  test_settings.py  urls.py  wsgi.py
conf/settings/: __init__.py  base.py  celery_beat_schedule.py  dev.py  prod.py  testing.py
docs/: README.md
docs/adr/: 0001-consolidate-search-in-products-app.md  0002-retain-django-framework.md  0003-decouple-escrow-with-ledger-and-holds.md
docs/agents/: domain.md  issue-tracker.md
docs/backend/: architecture.md  celery.md  elasticsearch.md  kibana-setup.md
docs/frontend/: landing-spec.md
docs/guidelines/: best-practices.md
docs/research/: nigerian_escrow_mvp_roadmap.md
logs/: error.log.1  info.log.1
safetrade/: asgi.py  celery.py  test_settings.py  urls.py  wsgi.py
safetrade/settings/: CREATE SCHEMA IF NOT EXISTS public;.sql  base.py  celery_beat_schedule.py  dev.py  prod.py  testing.py
scripts/: celery.py  django.py  find_circular_imports.py  start_workers.sh
templates/chat/: chat_room.html  login.html
(+461 files in other folders)
